--- a/regeneron/package.json
+++ b/regeneron/package.json
@@ -10,9 +10,10 @@
     "@testing-library/user-event": "^13.5.0",
     "cloudconvert": "^2.3.7",
     "fs": "^0.0.1-security",
-    "pdfjs-dist": "^4.2.67",
+    "pdfjs-dist": "^3.11.174",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
     "react-pdf": "^8.0.2",
     "react-pdftotext": "^1.2.0",
