--- a/regeneron/package.json
+++ b/regeneron/package.json
@@ -17,6 +17,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-pdf": "^8.0.2",
     "react-pdftotext": "^1.2.0",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "web-vitals": "^2.1.4"
